# EX_OpenCV

./: CMakeLists.txt  FIXME.md  README.md  README.txt  build.sh  config.sh  main.cpp  main.hpp  run.sh
DebugPrint/: CMakeLists.txt  DebugPrint.cpp  DebugPrint.hpp
SystemDependencies/: CMakeLists.txt  SysFiles.cpp  SysFiles.hpp
SystemManager/: CMakeLists.txt  SysHelper.cpp  SysParams.cpp  SysParams.hpp  SysWindow.cpp  SystemManager.cpp  SystemManager.hpp
